# inverseOfASquareRoot

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
src/: main.cpp
